@@ -1,3 +1,8 @@
+2010-05-28  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Changed linq
+	  context.
+
 2010-05-27  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
